// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentWrapper should match menu is closed 1`] = `
<div
  className="jsx-997264720"
/>
`;

exports[`components/ContentWrapper should match menu is open 1`] = `
<div
  className="jsx-2472722752"
/>
`;
